# Punklorde

./: .env.template  .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flutter_native_splash.yaml  pubspec.yaml
android/: .gitignore  build.gradle.kts  local.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
assets/i18n/: en.i18n.json  zh-CN.i18n.json
docs/: README.md
docs/framework/: architecture.md  platform.md
docs/module/: motion_simulator.md
docs/motion/: motion_simulator.md
docs/platform/: chaoxing.md  cqupt_sport_portal.md  cqupt_unify.md  tronclass.md
docs/start/: build.md
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: env.dart  main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/go/: go.mod  test_vpn.go  tunnel.go  tunnel.h
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  motion_sim.rs  sangfor.rs
rust/src/services/: mod.rs
rust/src/services/motion_sim/: mod.rs  model.rs  simulator.rs
rust/src/services/motion_sim/core/: mod.rs
rust/src/services/motion_sim/core/geo/: coordinate.rs  fence.rs  mod.rs  waypoint.rs
rust/src/services/motion_sim/core/motion/: interpolation.rs  mod.rs  movement.rs  velocity.rs
rust/src/services/motion_sim/core/noise/: jitter.rs  mod.rs  simplex.rs
rust/src/services/motion_sim/core/pathfinding/: astar.rs  mod.rs  smoother.rs
rust/src/services/motion_sim/core/sensors/: accelerometer.rs  barometer.rs  compass.rs  gps.rs  gyroscope.rs  mod.rs  pedometer.rs
rust/src/services/motion_sim/utils/: math.rs
rust/src/services/sangfor/: constants.rs  ffi.rs  mod.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+254 files in other folders)
